# Coral-GithubMCP-Agent

./: .env_sample  .gitignore  README.md  coral-agent.toml  github_coral_agent.py  main.py  pyproject.toml
.github/workflows/: docker-image.yml
src/: claims.py  main.py
src/utils/memory/: aws_memory.py  local_memory.py
